--- a/index.html
+++ b/index.html
@@ -177,16 +177,42 @@ footer{
 
 <!-- SKILLS -->
 <section id="skills" class="section bg-slate-900">
-  <h2 class="section-title">Technical Expertise</h2>
-  <div class="grid md:grid-cols-3 gap-6">
-    <div class="card fade-up">Java · JavaScript (ES6+) · Python</div>
-    <div class="card fade-up delay-1">Spring Boot · Node.js · Express</div>
-    <div class="card fade-up delay-2">React · React Native · HTML · CSS</div>
-    <div class="card fade-up">MySQL · MongoDB · SQL</div>
-    <div class="card fade-up delay-1">REST APIs · JWT Authentication</div>
-    <div class="card fade-up delay-2">Git · GitHub · Version Control</div>
+  <h2 class="section-title">Skills</h2>
+
+  <div class="grid md:grid-cols-2 gap-6">
+
+    <!-- Industry Knowledge -->
+    <div class="card fade-up">
+      <h3 class="text-xl font-semibold mb-4 text-white">Industry Knowledge</h3>
+      <ul class="list-disc list-inside text-slate-300 space-y-2">
+        <li>Object-Oriented Programming (OOP)</li>
+        <li>Data Structures</li>
+        <li>Express.js</li>
+      </ul>
+    </div>
+
+    <!-- Tools & Technologies -->
+    <div class="card fade-up delay-1">
+      <h3 class="text-xl font-semibold mb-4 text-white">Tools &amp; Technologies</h3>
+      <ul class="list-disc list-inside text-slate-300 space-y-2">
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML5</li>
+        <li>CSS</li>
+        <li>React.js</li>
+        <li>Node.js</li>
+        <li>Spring Boot</li>
+        <li>MongoDB</li>
+        <li>MySQL</li>
+        <li>SQL</li>
+        <li>Java</li>
+        <li>Python</li>
+      </ul>
+    </div>
+
   </div>
 </section>
+
 
 <!-- EXPERIENCE -->
 <section id="projects" class="section">
@@ -275,3 +301,4 @@ console.log("Professional refined portfolio loaded.");
 
 </body>
 </html>
+
